@@ -1221,10 +1221,10 @@ return|;
 block|}
 annotation|@
 name|Override
-DECL|method|findMergesToExpungeDeletes
+DECL|method|findForcedDeletesMerges
 specifier|public
 name|MergeSpecification
-name|findMergesToExpungeDeletes
+name|findForcedDeletesMerges
 parameter_list|(
 name|SegmentInfos
 name|infos
@@ -1300,7 +1300,7 @@ name|spec
 operator|=
 name|super
 operator|.
-name|findMergesToExpungeDeletes
+name|findForcedDeletesMerges
 argument_list|(
 name|smallSegments
 argument_list|)
