@@ -1624,10 +1624,10 @@ name|doRandomForceMergeAssert
 init|=
 literal|true
 decl_stmt|;
-DECL|method|expungeDeletes
+DECL|method|forceMergeDeletes
 specifier|public
 name|void
-name|expungeDeletes
+name|forceMergeDeletes
 parameter_list|(
 name|boolean
 name|doWait
@@ -1637,23 +1637,23 @@ name|IOException
 block|{
 name|w
 operator|.
-name|expungeDeletes
+name|forceMergeDeletes
 argument_list|(
 name|doWait
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|expungeDeletes
+DECL|method|forceMergeDeletes
 specifier|public
 name|void
-name|expungeDeletes
+name|forceMergeDeletes
 parameter_list|()
 throws|throws
 name|IOException
 block|{
 name|w
 operator|.
-name|expungeDeletes
+name|forceMergeDeletes
 argument_list|()
 expr_stmt|;
 block|}
