@@ -131,7 +131,7 @@ name|assertNull
 argument_list|(
 name|mp
 operator|.
-name|findMergesToExpungeDeletes
+name|findForcedDeletesMerges
 argument_list|(
 literal|null
 argument_list|)
